# rust_ses_example

./: Cargo.toml  README.md
src/: csv_serde.rs  email.rs  main.rs  s3.rs  tests.rs
test/: largecsv.txt  onlytext.txt  plaintext_attachment.txt  testcsv_date.csv
