[package]
name = "ses_rust_example"
version = "0.1.0"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.44"
rusoto_s3 = "0.44"
rusoto_ses = "0.44"
log = "0.4"
pretty_env_logger = "0.4"
aws_lambda_events = "0.3"
csv = "1"
serde = {version = "1", features=["derive"]}
lambda_runtime = "0.2"
percent-encoding = "2"
anyhow = "1"
mailparse = "0.12"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
