[package]
name = "ses_rust_example"
version = "0.1.0"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = {version = "0.44", default_features = false, features = ["rustls"]}
rusoto_s3 = {version = "0.44", default_features = false, features = ["rustls"]}
rusoto_ses = {version = "0.44", default_features = false, features = ["rustls"]}
log = "0.4"
pretty_env_logger = "0.4"
aws_lambda_events = "0.3"
csv = "1"
serde = {version = "1", features=["derive"]}
lambda_runtime = "0.2"
percent-encoding = "2"
anyhow = "1"
mailparse = "0.12"
lettre = { version = "0.10.0-alpha.0", default_features = false, features = ["rustls-tls", "builder"] }
mime = "0.3"
bytes = "0.5"
tokio = {version = "0.2", default_features = false, features = ["blocking", "rt-threaded"]}
base64 = "0.12"
chrono = "0.4"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
